tests/snapshots/prelude__get_values_from_map.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/prelude/get_values_from_map.bend
---
Strict mode:
(3, λa (a Map/Node/tag Maybe/None λb (b Map/Node/tag Maybe/None Map/Leaf λc (c Map/Node/tag λd (d Maybe/Some/tag 3) Map/Leaf Map/Leaf)) λe (e Map/Node/tag λf (f Maybe/Some/tag 2) Map/Leaf λg (g Map/Node/tag λh (h Maybe/Some/tag 4) Map/Leaf Map/Leaf))))
