tests/snapshots/prelude__map_tests.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/prelude/map_tests.bend
---
Strict mode:
((1, 3), (Map/Leaf, (λa (a Map/Node/tag λb (b Maybe/Some/tag 42) λc (c Map/Node/tag Maybe/None λd (d Map/Node/tag Maybe/None Map/Leaf λe (e Map/Node/tag λf (f Maybe/Some/tag 100) Map/Leaf Map/Leaf)) λg (g Map/Node/tag λh (h Maybe/Some/tag 13) Map/Leaf Map/Leaf)) λi (i Map/Node/tag λj (j Maybe/Some/tag 7) Map/Leaf λk (k Map/Node/tag λl (l Maybe/Some/tag 255) Map/Leaf Map/Leaf))), (Bool/False, (λm (m Map/Node/tag λn (n Maybe/Some/tag Nat/Zero) λo (o Map/Node/tag Maybe/None Map/Leaf λp (p Map/Node/tag λq (q Maybe/Some/tag λr (r Nat/Succ/tag λs (s Nat/Succ/tag Nat/Zero))) Map/Leaf Map/Leaf)) λt (t Map/Node/tag λu (u Maybe/Some/tag λv (v Nat/Succ/tag Nat/Zero)) Map/Leaf λw (w Map/Node/tag λx (x Maybe/Some/tag λy (y Nat/Succ/tag λz (z Nat/Succ/tag λab (ab Nat/Succ/tag Nat/Zero)))) Map/Leaf Map/Leaf))), (λbb (bb Map/Node/tag λcb (cb Maybe/Some/tag 42) λdb (db Map/Node/tag Maybe/None λeb (eb Map/Node/tag Maybe/None Map/Leaf λfb (fb Map/Node/tag λgb (gb Maybe/Some/tag λhb (hb 3)) Map/Leaf Map/Leaf)) λib (ib Map/Node/tag λjb (jb Maybe/Some/tag λkb (kb Nat/Succ/tag Nat/Zero)) Map/Leaf Map/Leaf)) λlb (lb Map/Node/tag λmb (mb Maybe/Some/tag Bool/True) λnb (nb Map/Node/tag Maybe/None Map/Leaf λob (ob Map/Node/tag λpb (pb Maybe/Some/tag Nat/Zero) Map/Leaf Map/Leaf)) λqb (qb Map/Node/tag λrb (rb Maybe/Some/tag 255) Map/Leaf Map/Leaf))), (λsb (sb Map/Node/tag Maybe/None λtb (tb Map/Node/tag Maybe/None Map/Leaf λub (ub Map/Node/tag λvb (vb Maybe/Some/tag 13) Map/Leaf Map/Leaf)) λwb (wb Map/Node/tag Maybe/None λxb (xb Map/Node/tag Maybe/None λyb (yb Map/Node/tag Maybe/None Map/Leaf λzb (zb Map/Node/tag λac (ac Maybe/Some/tag 144) Map/Leaf Map/Leaf)) λbc (bc Map/Node/tag λcc (cc Maybe/Some/tag 77) Map/Leaf Map/Leaf)) λdc (dc Map/Node/tag λec (ec Maybe/Some/tag 42) λfc (fc Map/Node/tag Maybe/None Map/Leaf λgc (gc Map/Node/tag λhc (hc Maybe/Some/tag 255) Map/Leaf Map/Leaf)) λic (ic Map/Node/tag λjc (jc Maybe/Some/tag 100) Map/Leaf Map/Leaf)))), λkc (kc Map/Node/tag λlc (lc Maybe/Some/tag 1) λmc (mc Map/Node/tag Maybe/None λnc (nc Map/Node/tag Maybe/None λoc (oc Map/Node/tag Maybe/None Map/Leaf λpc (pc Map/Node/tag λqc (qc Maybe/Some/tag 66) Map/Leaf Map/Leaf)) λrc (rc Map/Node/tag λsc (sc Maybe/Some/tag 36) Map/Leaf Map/Leaf)) λtc (tc Map/Node/tag λuc (uc Maybe/Some/tag 9) Map/Leaf Map/Leaf)) λvc (vc Map/Node/tag λwc (wc Maybe/Some/tag 4) λxc (xc Map/Node/tag Maybe/None Map/Leaf λyc (yc Map/Node/tag λzc (zc Maybe/Some/tag 25) Map/Leaf Map/Leaf)) λad (ad Map/Node/tag λbd (bd Maybe/Some/tag 16) Map/Leaf λcd (cd Map/Node/tag λdd (dd Maybe/Some/tag 49) Map/Leaf Map/Leaf)))))))))))
